--- a/css/styleCountry.css
+++ b/css/styleCountry.css
@@ -1,5 +1,5 @@
 header {
-    background-image: url(../images/page2/header/Minsk.png);
+    background-image: url(../images/page2/header/Minsk.webp);
     background-size: cover;
 }
 
