--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ body {
 }
 
 header {
-    background-image: url(../images/paralax/Tokyo.png);
+    background-image: url(../images/paralax/Tokyo.webp);
     background-size: cover;
 
     transition: var(--trn-s);
