--- a/css/fonts.css
+++ b/css/fonts.css
@@ -3,4 +3,5 @@
     src: url(../fonts/EuclidFlexLight.ttf) format('truetype');
     font-weight: normal;
     font-style: normal;
+    font-display: swap;
 }
