--- a/css/variables.css
+++ b/css/variables.css
@@ -15,12 +15,12 @@
     --line-p: 125%;
     --font-h: 2vw;
     --col-w: white;
-    --col-a: #ADD8E6;
+    --col-a: #add8e6;
 
     /* Фон */
-    --bg-s1: #1D282E;
-    --bg-s2: #29373F;
-    --btn-s1: #2B76CD;
+    --bg-s1: #1d282e;
+    --bg-s2: #29373f;
+    --btn-s1: #2b76cd;
     --btn-s1-hov: #235da0;
 
     /* Разное */
